text align fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  text-align: center;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
